--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,5 @@ fabric.properties
 .idea/**/azureSettings.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/phpstorm,laravel
+/.idea/deployment.xml
+/.idea/php.xml
